add autotool build rules
1. Remove the all code sample.
2. Adjust some header defines, making the application can use them
3. Add new build rules

Change-Id: I3cddb6b01f232084678267dea583d0eb6e0f8882
Signed-off-by: Randy Li <randy.li@rock-chips.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
+aclocal.m4
+autom4te.cache
+config.h
+config.h-new
+config.log
+config.status
+config.guess
+config.sub
+config.rpath
+configure
+libtool
+stamp-h
+stamp-h.in
+stamp-h1
+ltmain.sh
+missing
+mkinstalldirs
+compile
+install-sh
+depcomp
+autoregen.sh
+ABOUT-NLS
+/INSTALL
+_stdint.h
+.dirstamp
+
+/m4
+
+/*-libtool
 .deps
 .libs
 *.lo
@@ -8,3 +37,29 @@
 *~
 *.swp
 *.gc??
+Makefile.in
+Makefile
+*~
+*.swp
+*.gc??
+
+/m4
+tmp-orc.c
+*orc.h
+
+Build
+*.user
+*.suo
+*.ipch
+*.sdf
+*.opensdf
+*.DS_Store
+
+/test-driver
+*.log
+*.trs
+
+/build
+/subprojects
+/obj-arm-linux-gnueabihf/
+/obj-aarch64-linux-gnu/
