pkg-config: install header files and pkg-config files
Change-Id: I2679d8b8bea703dd56bb1c839605abb7b6279bac
Signed-off-by: Randy Li <randy.li@rock-chips.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,3 +16,5 @@ rk_rga_include_HEADERS = inc/drmrga.h			\
 			 inc/RockchipRgaMacro.h
 
 rk_rga_includedir = $(includedir)/rk_rga
+
+pkgconfig_DATA = librk_rga.pc
