add a sample program to verfiy the platform and build step
Change-Id: Id98f069fff1229e4c36a7a07459728cdef90353e
Signed-off-by: Randy Li <randy.li@rock-chips.com>

--- a/configure.ac
+++ b/configure.ac
@@ -37,6 +37,7 @@ AC_CHECK_FUNCS([malloc memset munmap strerror])
 AC_CONFIG_FILES([Makefile
 lib/Makefile
 lib/normal/Makefile
+tests/Makefile
 librk_rga.pc
 ])
 
